--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              '개발새발'
-bio:                '시작은 개발새발이였지만 그 끝은 창대하리라.'
+bio:                '블로그쓰기넘힘들댜.'
 description:        "description"
 reading_time:       true
 words_per_minute:   200
