--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,9 @@
 
 - title: Projects
   url: /projects/
-  
   - title: Operations
   url: /Operations/
+    - title: Operations
+  url: /operations/
   
   
