네비게이션 데이터

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,14 @@
 # Site navigation links
 
-- title: Projects2
+#- title: Projects
+#  url: /projects/
+
+- title: Projects
   url: /projects/
-  - title: Operations
+
+
+- title: Operations
   url: /Operations/
-    - title: Operations
-  url: /operations/
+
   
   
