--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,10 @@
 - title: Projects
   url: /projects/
 
+- title: Portfolio
+  url: /Portfolio/
+  
+ 
 - title: Operations
   url: /operations/
   
